
0.001007  TBD
          - Confirmation validator now skips when either the confirmation value or
          check value is not defined.  This prevents showing a confirmation error
          when both values are not defined which I think is correct but its a minor
          breaking change.  
          - Lots more test cases are DBIC nesting.

0.001006  2021 April 19
          - Possible fix for issue where windows doesn't find locale paths

0.001005  2021 April 18
          - Declare column validations inside a column definition for DBIC
          - lots of tweaks and fixes to now nested validations for DBIC work
          - Start on having CCI for Windows and MacOS
          - Stubbed out a lot of the docs needed for Valiant::DBIC
          - improved the Catalyst example using DBIC with Valiant
          - Allowed one to set a context on a model before running the validation
          - enabled some debugging for test cases to help me fix the Windows issue.  If 
            anyone has access to Strawberry Perl on Windows and wants to help me make 
            this work on Windows please give me a shout!

0.001004  2021 April 07
          - Specify more exact dependency versions in cpanfile.
          - lots of updates to nested DBIC support and improved example application

0.001003  2021 March 04
          - Allow one to disable auto validation on DBIC classes.  This allows
          you to insert or update rows that are invalid.
          - Added some test cases for strict mode validations and allowed one a
          bit more control over strict mode messaging.

0.001002  2021 February 25
          - quick followup that just fixes POD issues

0.001001  2021 February 25
          - First Post!  Please only use this if you are ready to help
          file bug reports and read all the docs carefully.
          - This release is dedicated to my dog Tornado who we lost to
          cancer in August of 2020.